src/test/deca/syntax/valid/parser/oracle/void_classes_with_extension_and_main_block.deca
class ABC{}
class B extends ABC{}
{}