src/test/deca/syntax/invalid/parser/oracle/method_decl3.deca

class A { a a (a éa {} }
